--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "eslint": "^6.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-intl": "^5.8.1"
+    "react-intl": "^5.8.1",
+    "@folio/stripes": "^7.0.0"
   },
   "dependencies": {
     "dom-helpers": "^3.4.0",
