--- a/package.json
+++ b/package.json
@@ -10,20 +10,45 @@
     "node": ">=10.0.0"
   },
   "scripts": {
+    "test": "yarn run test:jest",
+    "test:jest": "jest --ci --coverage",
     "lint": "eslint .",
     "formatjs-compile": "formatjs compile-folder --ast --format simple ./translations/ui-handler-stripes-registry ./translations/ui-handler-stripes-registry/compiled"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-decorators": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
     "@folio/eslint-config-stripes": "^6.0.0",
     "@formatjs/cli": "^4.2.31",
+    "@folio/stripes-testing": "^4.0.0",
+    "@testing-library/dom": "^7.26.6",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/user-event": "^12.2.2",
+    "babel-jest": "^26.6.3",
+    "babel-plugin-module-resolver": "^4.0.0",
     "babel-eslint": "^10.0.0",
     "eslint": "^6.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jest-dom": "^3.2.4",
+    "eslint-plugin-testing-library": "^3.10.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
+    "jest-css-modules": "^2.1.0",
+    "jest-junit": "^12.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intl": "^5.8.1",
+    "sinon": "^9.0.2",
+    "react-query": "^3.6.0",
     "@folio/stripes": "^7.0.0"
   },
   "dependencies": {
+    "@folio/stripes-erm-components": "^6.0.0",
+    "@folio/stripes-testing": "^4.0.0",
+    "@testing-library/react": "^12.1.2",
     "dom-helpers": "^3.4.0",
     "lodash": "^4.17.11",
     "prop-types": "^15.6.0"
