--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@folio/handler-stripes-registry",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "frontend registry for Stripes",
   "publishConfig": {
     "registry": "https://repository.folio.org/repository/npm-folio/"
@@ -21,7 +21,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intl": "^5.8.1",
-    "@folio/stripes": "^7.1.0"
+    "@folio/stripes": "^7.1.0",
+    "@folio/stripes-cli": "^2.5.0"
   },
   "dependencies": {
     "dom-helpers": "^3.4.0",
