--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "devDependencies": {
     "@folio/eslint-config-stripes": "^6.1.0",
     "@formatjs/cli": "^4.2.31",
-    "babel-eslint": "^10.0.0",
-    "eslint": "^6.2.1",
+    "@babel/eslint-parser": "^7.15.0",
+    "eslint": "^7.32.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intl": "^5.8.1",
