--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,20 @@
   "extends": "@folio/eslint-config-stripes",
   "parser": "@babel/eslint-parser",
   "rules": {
-    "import/no-extraneous-dependencies": "off",
-    "react/jsx-sort-props": "error"
-  }
+    "react/jsx-sort-props": "error",
+    "no-unused-vars": [
+      "warn",
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "(React|^_)"
+      }
+    ]
+  },
+  "env": {
+    "jest": true
+  },
+  "plugins": [
+    "testing-library",
+    "jest-dom"
+  ]
 }
