--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@folio/handler-stripes-registry",
-  "version": "1.5.0",
+  "version": "2.0.0",
   "description": "frontend registry for Stripes",
   "publishConfig": {
     "registry": "https://repository.folio.org/repository/npm-folio/"
@@ -15,15 +15,15 @@
     "formatjs-compile": "formatjs compile-folder --ast --format simple ./translations/ui-handler-stripes-registry ./translations/ui-handler-stripes-registry/compiled"
   },
   "devDependencies": {
-    "@folio/eslint-config-stripes": "^6.3.0",
+    "@folio/eslint-config-stripes": "^7.0.0",
     "@formatjs/cli": "^4.2.31",
     "@babel/eslint-parser": "^7.15.0",
     "eslint": "^7.32.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-intl": "^5.8.1",
-    "@folio/stripes": "^7.3.1 || ^8.0.0",
-    "@folio/stripes-cli": "^2.6.1"
+    "@folio/stripes": "^9.0.0",
+    "@folio/stripes-cli": "^3.0.0"
   },
   "dependencies": {
     "dom-helpers": "^3.4.0",
@@ -31,8 +31,8 @@
     "prop-types": "^15.6.0"
   },
   "peerDependencies": {
-    "@folio/stripes": "^7.3.1 || ^8.0.0",
-    "react": "^17.0.2",
+    "@folio/stripes": "^9.0.0",
+    "react": "^18.2.0",
     "react-intl": "^5.8.1",
     "react-router-dom": "^5.2.0"
   },
